Accessibility improvements. Darken section heading colour for people with eyesight issues related to contrast.

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -7,7 +7,7 @@ $header-heading-color: #fff !default;
 $header-bg-color: #3b44b5 !default;
 
 // Text
-$section-headings-color: #f50057 !default;
+$section-headings-color: #e50050 !default;
 $body-text-color: #111 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
